--- a/gb/7/5/18/n1714716.md
+++ b/gb/7/5/18/n1714716.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hhdncs3919/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hhdncs3919/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hhdncs3919/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hhdncs3919/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hhdncs3919/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hhdncs3919/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hhdncs3919/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hhdncs3919/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hhdncs3919/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hhdncs3919/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hhdncs3919/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hhdncs3919/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hhdncs3919/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hhdncs3919/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hhdncs3919/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hhdncs3919/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hhdncs3919/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hhdncs3919/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hhdncs3919/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hhdncs3919/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hhdncs3919/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hhdncs3919/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hhdncs3919/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hhdncs3919/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>一半孕妇在吸二手烟   每年上万婴儿受到烟害</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元5月18日讯】(据中广新闻记者徐韵翔报导)据统计，台湾孕妇吸烟率为6.6%，推估约有一万三千名宝宝打从娘胎就受到烟害，而孕妇自觉在家中<ahref="https://github.com/hhdncs3919/djy/blob/master/gb/tag/%E4%BA%8C%E6%89%8B%E7%83%9F.md#1">二手烟</a>暴露率则高达55%，平均每两位准妈妈就有一人受到烟害；医师表示，吸烟不但有损自身健康，更会导致胎儿流产、早产等风险，国健局鼓励孕妇可以善用以心理咨商为主的戒烟专线协助，同时也提醒瘾君子应及早戒烟，别祸延下一代。</p>
-<p>吸烟不止有害自身健康，对于孕妇宝宝的影响更是深远。依据国健局公布的一项最新调查发现，以每年20万名孕妇估计，约有一万三千名宝宝打从娘胎就受到烟害，而孕妇自觉在家中<ahref="https://github.com/hhdncs3919/djy/blob/master/gb/tag/%E4%BA%8C%E6%89%8B%E7%83%9F.md#1">二手烟</a>暴露率则高达55%，平均每两位准妈妈就有一人受到烟害，而同住的吸烟者大多是配偶。</p>
+<p>【大纪元5月18日讯】(据中广新闻记者徐韵翔报导)据统计，台湾孕妇吸烟率为6.6%，推估约有一万三千名宝宝打从娘胎就受到烟害，而孕妇自觉在家中<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BA%8C%E6%89%8B%E7%83%9F.md#1">二手烟</a>暴露率则高达55%，平均每两位准妈妈就有一人受到烟害；医师表示，吸烟不但有损自身健康，更会导致胎儿流产、早产等风险，国健局鼓励孕妇可以善用以心理咨商为主的戒烟专线协助，同时也提醒瘾君子应及早戒烟，别祸延下一代。</p>
+<p>吸烟不止有害自身健康，对于孕妇宝宝的影响更是深远。依据国健局公布的一项最新调查发现，以每年20万名孕妇估计，约有一万三千名宝宝打从娘胎就受到烟害，而孕妇自觉在家中<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BA%8C%E6%89%8B%E7%83%9F.md#1">二手烟</a>暴露率则高达55%，平均每两位准妈妈就有一人受到烟害，而同住的吸烟者大多是配偶。</p>
 <p>中华民国周产期医学会理事徐振杰医师指出，烟害对于胎儿的发育有明显的威胁，会造成生长迟滞，生下比起一般减少两到三百公克的低体重儿，胎盘也可能早期剥离，造成流产、早产等，影响孩子的智力发展与兔唇风险；此外，医师强调，即使孕妇不抽烟，二手烟中的尼古丁代谢物可丁宁等有害物质，也可能经由人体进入母乳变质，导致乳汁分泌不足等问题，因此，呼吁瘾君子为了下一代应尽早向烟说不。</p>
 <p>有鉴于怀孕期间使用戒烟药物，例如尼古丁贴片，担心有伤害胎儿之虞，国健局鼓励本身吸烟孕妇、或是饱受二手烟危害的准妈妈，可以透过以心理咨商为主的戒烟专线协助，解决烟害困扰。</p>
 
@@ -14,47 +14,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/7/1/15/n1590459.md#1">马政府拟立法禁父母在车内孩子面前抽烟</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/7/3/12/n1643575.md#1">天天五蔬果 防癌轻松做</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/7/4/6/n1670524.md#1">印度交通新规定：开车不抽烟 抽烟不开车</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/7/4/25/n1689233.md#1">美国宅新措施 不戒烟就搬家</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/15/n13163838.md#1">中资渗透香港是教训 台湾须防白蚁战术</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/15/n13163687.md#1">对日抗战胜利76周年 朱立伦：不该视和平理所当然</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/15/n13163641.md#1">苏贞昌：自购莫德纳15日24.9万剂抵台</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/15/n13163712.md#1">8月上旬农损5.7亿 菜价回稳再等2周</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/15/n13163714.md#1">青年寻职津贴 台立委：应扩大范围</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/15/n13163646.md#1">与消费券不同 台立委：5倍券有加乘振兴效果</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/1/15/n1590459.md#1">马政府拟立法禁父母在车内孩子面前抽烟</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/3/12/n1643575.md#1">天天五蔬果 防癌轻松做</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/6/n1670524.md#1">印度交通新规定：开车不抽烟 抽烟不开车</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/25/n1689233.md#1">美国宅新措施 不戒烟就搬家</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740907.md#1">音象公司行销依附公益团体 公平会开罚200万元</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740904.md#1">通膨归因供给面 美升息恐难压低物价</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740823.md#1">劳资协商四大议题 台铁工会：不加班活动仍持续</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740722.md#1">中共官媒刻意突显李克强？日媒：习近平已被架空</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740871.md#1">台政院修矿业法删霸王条款 新增原住民咨商同意</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740870.md#1">驳桃园蓝白合 赖香伶：有机会请教罗智强</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405198.md#1" target="_blank">蔡霞：文革是一场每个人命运的浩劫</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555059.md#1" target="_blank">94岁老人：没有法轮功我早就不在人世了</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10048859.md#1" target="_blank">《苦菜花》人物原型的真实人生（5）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/18/n3966634.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑3</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/13/n13159580.md#1">游历地狱23分钟 美国男子著书披露见闻</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/5/26/n12976463.md#1">【金色种子】1997年李洪志大师的台湾行</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/10/n13153445.md#1">【未解之谜】外星人就在你身边</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/6/n13144687.md#1">【未解之谜】为什么你又来到我身边</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/12/n13158236.md#1">【未解之谜】日本圣德太子的转世奇缘</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/13/n13160769.md#1">【时事军事】最新美国对台军售 让中共开始喊疼</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/14/n13162256.md#1">【十字路口】习可望连任？北京修六堵高墙锁国</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/13/n13161101.md#1">【方菲访谈】专访王维洛：海绵城市是伪命题（2）</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/13/n13159795.md#1">郑州大量泡水车空拍照惊人 网民：车主呢？</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/13/n13161185.md#1">【远见快评】美国拉开总攻架势？北京方寸大乱</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/13/n13159005.md#1">中共出手打击娱乐圈 吴亦凡后22位明星被点名</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/12/n13158404.md#1">张智霖打算退出演艺圈？袁咏仪霸气回应</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/13/n13161001.md#1">自曝女儿长的像赵又廷 高圆圆将夫君摆第一</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/12/n13158700.md#1">IG上发文称“中国” 胡杏儿遭小粉红轰港独</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/13/n13161326.md#1">48岁好莱坞女星迪亚茨 自曝7年前隐退原因</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/12/n13158515.md#1">挺孙俪挨网酸蹭老婆热度 邓超三字回应超宠妻</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/12/n13157294.md#1">银发族误踩2地雷 吃三低饮食伤健康</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/13/n13159580.md#1">游历地狱23分钟 美国男子著书披露见闻</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/13/n13159862.md#1">美国男子在海滩钓鱼 竟然钓到大白鲨</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/13/n13159371.md#1">天然免疫力比疫苗更强大？</a></li>
-<li><a href="https://github.com/hhdncs3919/djy/blob/master/gb/21/8/12/n13157353.md#1">每天做3个动作可瘦小腹 改善胃食道逆流</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/11/n13733580.md#1">听《顶碗舞》品蒙古奶茶 体验千年不变的热情</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740136.md#1">【拍案惊奇】民航系统不单纯 涉党内倒习操作？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740132.md#1">【财商天下】核检日赚一亿 钱进了谁的口袋？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">任贤齐介绍田中老家 吃喝不花钱自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736847.md#1">9大体质快看你是哪种？教你调回最佳体质</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hhdncs3919/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hhdncs3919/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/7/5/18/n1714716.htm">一半孕妇在吸二手烟   每年上万婴儿受到烟害</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/7/5/18/n1714716.htm">一半孕妇在吸二手烟   每年上万婴儿受到烟害</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hhdncs3919/djy/blob/master/gb/7/5/18/n1714716.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hhdncs3919/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hhdncs3919/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hhdncs3919/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hhdncs3919/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hhdncs3919/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/7/5/18/n1714716.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
